implement charging status judgement

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -14,6 +14,11 @@ lab.gpuTemp = GPU Temperature
 lab.gpuPower = GPU Power
 lab.gpuClock = GPU Clock
 
+lab.batCharging = Charging Status
+lab.batRemain = Battery Remain
+lab.batHealth = Battery Health
+lab.batRate = Battery Rate
+
 lab.systemName = Name
 lab.osVersion = Version
 lab.laptopModel = Model
