implement activate win and enter bios function

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -1,4 +1,5 @@
 app.title = ClinicAssistant
+app.title.activateWindows = Activate Windows
 
 lang.true = true
 lang.false = false
@@ -24,3 +25,5 @@ lab.osVersion = Version
 lab.laptopModel = Model
 lab.systemType = Type
 lab.activationStatus = Activation
+
+lab.activationStatusText = Activation Status
