implement interactively see BitLocker unlocked progress

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -1,5 +1,7 @@
 app.title = ClinicAssistant
+app.title.main = Main Window
 app.title.activateWindows = Activate Windows
+app.title.bitlocker = BitLocker Management
 
 lang.true = true
 lang.false = false
