implement interactively unlock BitLocker

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -2,6 +2,8 @@ app.title = ClinicAssistant
 app.title.main = Main Window
 app.title.activateWindows = Activate Windows
 app.title.bitlocker = BitLocker Management
+app.title.bitlocker.unlockConfirmTitle = Unlock Confirmation
+app.title.bitlocker.unlockConfirmHint = Are you sure you want to unlock BitLocker drive %s:?
 
 lang.true = true
 lang.false = false
