implement stress test ui, fix stress test until's logic issue

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -2,8 +2,15 @@ app.title = ClinicAssistant
 app.title.main = Main Window
 app.title.activateWindows = Activate Windows
 app.title.bitlocker = BitLocker Management
+app.title.stressTest = Stress Test
 app.title.bitlocker.unlockConfirmTitle = Unlock Confirmation
 app.title.bitlocker.unlockConfirmHint = Are you sure you want to unlock BitLocker drive %s:?
+app.title.biosTitle = Enter BIOS
+app.title.biosHint = Are you sure you want to restart the computer then enter BIOS setup?
+app.title.resetProxyTitle = Reset Proxy Settings
+app.title.resetProxyHint = Are you sure you want to reset the system proxy settings?
+app.title.code56Title = Code 56 Repair
+app.title.code56Hint = Don't use it unless your network adapter shows Code 56 in Device Manager.
 
 lang.true = true
 lang.false = false
@@ -31,3 +38,6 @@ lab.systemType = Type
 lab.activationStatus = Activation
 
 lab.activationStatusText = Activation Status
+
+btn.stressTest.runTest = Run Stress Test
+btn.stressTest.stopTest = Stop Stress Test
