implement details of stress tests' charts

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -39,5 +39,8 @@ lab.activationStatus = Activation
 
 lab.activationStatusText = Activation Status
 
+lab.stressTestLastingTime = Test Lasting Time
+lab.stressTestNoWarning = No Warnings Detected
+
 btn.stressTest.runTest = Run Stress Test
 btn.stressTest.stopTest = Stop Stress Test
