implement version, help and about frame

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -11,12 +11,18 @@ app.title.resetProxyTitle = Reset Proxy Settings
 app.title.resetProxyHint = Are you sure you want to reset the system proxy settings?
 app.title.code56Title = Code 56 Repair
 app.title.code56Hint = Don't use it unless your network adapter shows Code 56 in Device Manager.
+app.title.help = Help
+app.title.about = About
+app.title.version = Version
 
 lang.true = true
 lang.false = false
 
 lang.bit32 = 32-bit
 lang.bit64 = 64-bit
+
+lang.kernel = Kernel
+lang.desktop = Desktop
 
 lab.cpuTemp = CPU Temperature
 lab.cpuPower = CPU Power
