implement ram info in gui

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -43,6 +43,9 @@ lab.laptopModel = Model
 lab.systemType = Type
 lab.activationStatus = Activation
 
+lab.ramTotal = RAM Total
+lab.ramUsage = RAM Usage
+
 lab.activationStatusText = Activation Status
 
 lab.stressTestLastingTime = Test Lasting Time
