fix wrong call order of stress test closing, fix hard-encoding of fxml, make the main window has a bettter default size

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -49,7 +49,75 @@ lab.ramUsage = RAM Usage
 lab.activationStatusText = Activation Status
 
 lab.stressTestLastingTime = Test Lasting Time
+lab.stressTestLastingTime.format = Test Lasting Time %.2fs
 lab.stressTestNoWarning = No Warnings Detected
 
 btn.stressTest.runTest = Run Stress Test
 btn.stressTest.stopTest = Stop Stress Test
+
+btn.name.monitor = Monitor
+btn.name.tools = Tools
+lab.name.cpuMonitor = CPU Monitor
+lab.name.gpuMonitor = GPU Monitor
+lab.name.systemInfo = System Information
+lab.name.temp = Temp
+lab.name.power = Power
+lab.name.clock = Clock
+lab.name.systemName = System Name
+lab.name.osVersion = OS Version
+lab.name.laptopModel = Laptop Model
+lab.name.systemType = System Type
+lab.name.activationStatus = Activation Status
+lab.name.memory = Memory
+lab.name.total = Total
+lab.name.used = Used %
+lab.name.disks = Disks
+lab.name.diskInfo = Disk Info
+lab.name.admin = Admin Privileges
+lab.name.fanPercent = Fan %
+lab.admin.status = Running Under Admin?
+lab.name.battery = Battery
+lab.name.tools = Tools
+
+tp.name.system = System
+tp.name.disk = Disk
+tp.name.network = Network
+tp.name.stressTest = Stress Test
+
+btn.tools.activateWindows = Activate Windows
+btn.tools.restartEnterBios = Restart Enter BIOS
+btn.tools.unlockBitLocker = Unlock BitLocker
+btn.tools.proxyReset = Proxy reset
+btn.tools.code56Repair = Code 56 repair
+btn.tools.stressTest = Stress Test
+
+# Stress test frame
+lab.stressTest.optionsTitle = Stress Options
+lab.stressTest.cpuOption = CPU Stress Test
+lab.stressTest.gpuOption = GPU Stress Test
+lab.stressTest.chargerPower = Charger Power
+lab.stressTest.liveStatusTitle = Live Status
+lab.stressTest.cpuInfoTitle = CPU Info
+lab.stressTest.gpuInfoTitle = GPU Info
+lab.stressTest.powerInfoTitle = Power Info
+lab.stressTest.warningsTitle = Warnings
+
+chart.axis.timeSeconds = Time (s)
+chart.stressTest.cpuTemp = CPU Temp (°C)
+chart.stressTest.cpuPower = CPU Power (W)
+chart.stressTest.gpuTemp = GPU Temp (°C)
+chart.stressTest.gpuPower = GPU Power (W)
+
+# BitLocker frame
+lab.bitlocker.partitionsTitle = BitLocker Partitions
+
+# Dialogs
+dlg.tooManyInfoWindows.header = Stack overflow!
+dlg.tooManyInfoWindows.content = You have opened too much help/about windows! (I'm just kidding :D)
+
+# CSV Export
+csv.stressTest.timeSeconds = Time(s)
+csv.stressTest.cpuTemp = CPU_Temp(°C)
+csv.stressTest.cpuPower = CPU_Power(W)
+csv.stressTest.gpuTemp = GPU_Temp(°C)
+csv.stressTest.gpuPower = GPU_Power(W)
