implement disk info and admin info in the main window

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -24,6 +24,8 @@ lang.bit64 = 64-bit
 lang.kernel = Kernel
 lang.desktop = Desktop
 
+lang.GB = GB
+
 lab.cpuTemp = CPU Temperature
 lab.cpuPower = CPU Power
 lab.cpuClock = CPU Clock
