implement CLINIC_OP tools detect

--- a/Desktop/src/main/resources/messages_en_US.properties
+++ b/Desktop/src/main/resources/messages_en_US.properties
@@ -59,6 +59,7 @@ btn.stressTest.stopTest = Stop Stress Test
 
 btn.name.monitor = Monitor
 btn.name.tools = Tools
+btn.name.externals = External Tools
 lab.name.cpuMonitor = CPU Monitor
 lab.name.gpuMonitor = GPU Monitor
 lab.name.systemInfo = System Information
@@ -80,6 +81,7 @@ lab.name.fanPercent = Fan %
 lab.admin.status = Running Under Admin?
 lab.name.battery = Battery
 lab.name.tools = Tools
+lab.name.externals = External Tools
 
 tp.name.system = System
 tp.name.disk = Disk
@@ -90,7 +92,7 @@ btn.tools.activateWindows = Activate Windows
 btn.tools.restartEnterBios = Restart Enter BIOS
 btn.tools.unlockBitLocker = Unlock BitLocker
 btn.tools.proxyReset = Proxy reset
-btn.tools.code56Repair = Code 56 repair
+btn.tools.code56Repair = Code 56 Repair
 btn.tools.stressTest = Stress Test
 
 # Stress test frame
