--- a/doc/report/main.tex
+++ b/doc/report/main.tex
@@ -77,7 +77,7 @@
 ]{biblatex}
 
 % 参考文献引用文件位于 misc/ref.bib
-\addbibresource{misc/ref.bib}
+%\addbibresource{misc/ref.bib}
 
 % 若要按计算机学院要求，添加“北京理工大学”水印，请参考
 % https://bithesis.bitnp.net/faq/watermark.html
@@ -107,7 +107,7 @@
 \mainmatter
 
 % 在这里引用各章 TeX 文件，按需添加
-\input{chapters/1_chapter1.tex}
+\input{chapters/chapter1.tex}
 \input{chapters/2_chapter2.tex}
 
 % 后置内容
