--- a/doc/report/main.tex
+++ b/doc/report/main.tex
@@ -28,7 +28,7 @@
     % 想要让某项封面信息留空（但是保留下划线），请传入空白符组成的字符串，如"{~}"。
     % 如需要换行，则用 “\\” 符号分割。
     title = 《Java程序设计》结课项目文档,
-    %titleEn = {The Subject of Undergraduate Graduation Project (Thesis) of Beijing Institute of Technology},
+    titleEn = {Final Report of Java Programming},
     school = 计算机学院,
     major = 数据科学与大数据技术（全英文教学专业）,
     %class = 0561xxxx,
@@ -108,20 +108,20 @@
 
 % 在这里引用各章 TeX 文件，按需添加
 \input{chapters/chapter1.tex}
-\input{chapters/2_chapter2.tex}
+%\input{chapters/2_chapter2.tex}
 
 % 后置内容
 \backmatter
 
 % 结论：在相应 TeX 文件撰写
-\input{misc/2_conclusion.tex}
+%\input{misc/2_conclusion.tex}
 % 参考文献：
 % 添加文献时，请按 BibTeX 格式添加至 misc/ref.bib，并在正文所需位置使用 \cite{…} 引用。
 % 如无特殊需要，无需改动相应 TeX 文件。
-\input{misc/3_reference.tex}
+%\input{misc/3_reference.tex}
 % 附录：在相应 TeX 文件撰写；不需要时可删除
-\input{misc/4_appendix.tex}
+%\input{misc/4_appendix.tex}
 % 致谢：在相应 TeX 文件撰写
-\input{misc/5_acknowledgements.tex}
+%\input{misc/5_acknowledgements.tex}
 
 \end{document}
