config self-contained package, add project report

--- a/doc/report/main.tex
+++ b/doc/report/main.tex
@@ -60,6 +60,8 @@
 % 使用代码块时，也可选用自己的喜欢的其他宏包，如 minted：https://bithesis.bitnp.net/faq/minted.html
 % 如果不需要，直接删除即可。
 \usepackage{listings}
+\usepackage{float}
+\usepackage{subfig}
 
 
 % 大部分关于参考文献样式的修改，都可以通过此处的选项进行配置。
@@ -108,7 +110,9 @@
 
 % 在这里引用各章 TeX 文件，按需添加
 \input{chapters/chapter1.tex}
-%\input{chapters/2_chapter2.tex}
+\input{chapters/chapter2.tex}
+\input{chapters/chapter3.tex}
+\input{chapters/chapter4.tex}
 
 % 后置内容
 \backmatter
