--- a/doc/report/main.tex
+++ b/doc/report/main.tex
@@ -77,7 +77,7 @@
   eprint=false,
   isbn=false,
 ]{biblatex}
-
+	
 \definecolor{eclipseStrings}{RGB}{42,0.0,255}
 \definecolor{eclipseKeywords}{RGB}{127,0,85}
 \colorlet{numb}{magenta!60!black}
@@ -148,6 +148,7 @@
 \input{chapters/chapter2.tex}
 \input{chapters/chapter3.tex}
 \input{chapters/chapter4.tex}
+\input{chapters/chapter5.tex}
 
 % 后置内容
 \backmatter
