--- a/doc/report/main.tex
+++ b/doc/report/main.tex
@@ -62,6 +62,8 @@
 \usepackage{listings}
 \usepackage{float}
 \usepackage{subfig}
+\usepackage{tikz}
+\usetikzlibrary{automata, positioning, arrows.meta}
 
 
 % 大部分关于参考文献样式的修改，都可以通过此处的选项进行配置。
@@ -83,9 +85,9 @@
 \colorlet{numb}{magenta!60!black}
 
 \lstdefinelanguage{json}{
-    basicstyle=\small\ttfamily,
-    commentstyle=\color{eclipseStrings}, % style of comment
-    stringstyle=\color{eclipseKeywords}, % style of strings
+    %basicstyle=\small\ttfamily,
+    %commentstyle=\color{eclipseStrings}, % style of comment
+    %stringstyle=\color{eclipseKeywords}, % style of strings
     numbers=left,
     numberstyle=\small,
     stepnumber=1,
@@ -149,6 +151,7 @@
 \input{chapters/chapter3.tex}
 \input{chapters/chapter4.tex}
 \input{chapters/chapter5.tex}
+\input{chapters/chapter6.tex}
 
 % 后置内容
 \backmatter
