--- a/doc/report/main.tex
+++ b/doc/report/main.tex
@@ -80,8 +80,8 @@
   isbn=false,
 ]{biblatex}
 	
-\definecolor{eclipseStrings}{RGB}{42,0.0,255}
-\definecolor{eclipseKeywords}{RGB}{127,0,85}
+%\definecolor{eclipseStrings}{RGB}{42,0.0,255}
+%\definecolor{eclipseKeywords}{RGB}{127,0,85}
 \colorlet{numb}{magenta!60!black}
 
 \lstdefinelanguage{json}{
@@ -152,6 +152,8 @@
 \input{chapters/chapter4.tex}
 \input{chapters/chapter5.tex}
 \input{chapters/chapter6.tex}
+\input{chapters/chapter7.tex}
+\input{chapters/chapter8.tex}
 
 % 后置内容
 \backmatter
